@@ -6,6 +6,7 @@ Broker:
 - Fix handling of outgoing QoS>0 messages for bridges that could not be sent
   because the bridge connection was down.
 - Free unused topic tree elements. Closes #468987.
+- Fix some potential memory leaks. Closes #470253.
 
 Client library:
 - Add missing error strings to mosquitto_strerror.
